# WirelessMotordrive

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
arduino_libs/Xbee/: findthislib.txt
arduino_libs/lcd05/: lcd05.cpp  lcd05.h  library.properties
arduino_libs/lcd05/examples/hi/: hi.ino
arduino_libs/rd02/: keywords.txt  library.properties  rd02.cpp  rd02.h
arduino_sketches/lcd05_arrows/: bitmaps  lcd05_arrows.ino
arduino_sketches/lcd05_display/: lcd05_display.ino
arduino_sketches/lcd05_time_display/: lcd05_time_display.ino
arduino_sketches/lcd05_with_lib/: lcd05_with_lib.ino
arduino_sketches/rd02_measuring/: rd02_measuring.ino
arduino_sketches/rd02_with_lib/: rd02_with_lib.ino
arduino_sketches/xbee_bridge/: xbee_bridge.ino
arduino_sketches/xbee_lcd_bridge/: xbee_lcd_bridge.ino
console/: controls.c  controls.h  controls_ncurses.c  test  test.c
doc/: WirelessMotorDrive.1.md.html  WirelessMotorDrive.md  WirelessMotorDrive.md.html  memoria.tex
include/: commands.h  connect.h  controls.h  timing.h
libs/lcd05/: keywords.txt  lcd05.cpp
sketch/: Makefile  notes.txt  xbee_bridge.ino
sketch/build-uno/: sketch.elf  sketch.hex  xbee_bridge.ino.d
sketch/build-uno/core/: CDC.cpp.d  HardwareSerial.cpp.d  HardwareSerial0.cpp.d  HardwareSerial1.cpp.d  HardwareSerial2.cpp.d  HardwareSerial3.cpp.d  IPAddress.cpp.d  PluggableUSB.cpp.d  Print.cpp.d  Stream.cpp.d  Tone.cpp.d  USBCore.cpp.d  WInterrupts.c.d  WMath.cpp.d  WString.cpp.d  abi.cpp.d  hooks.c.d  main.cpp.d  new.cpp.d  wiring.c.d  wiring_analog.c.d  wiring_digital.c.d  wiring_pulse.S.d  wiring_pulse.c.d  wiring_shift.c.d
sketch/build-uno/platformlibs/Wire/src/: Wire.cpp.d
sketch/build-uno/platformlibs/Wire/src/utility/: twi.c.d
sketch/build-uno/userlibs/Time/: DateStrings.cpp.d  Time.cpp.d
sketch/build-uno/userlibs/Xbee/: Printers.cpp.d  XBee.cpp.d
sketch/build-uno/userlibs/lcd05/: lcd05.cpp.d
sketch/build-uno/userlibs/rd02/: rd02.cpp.d
src/: commands.cpp  connect.c  connect.cpp  controls.cpp  main.c  main.cpp  timing.cpp
